<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">Cape May Library App</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Catalog</string>
    <string name="browse_genre_subtitle">Check here to browse for your selection</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to Cast</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="calendar_message">This is a placeholder for the calendar</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="search_result">Search Result!</string>
    <string name="action_settings">Settings</string>
    <string name="searchby_string">Search By</string>
    <string name="searchby_any">Any Field</string>
    <string name="searchby_author">Author</string>
    <string name="searchby_title">Title</string>
    <string name="searchby_ISBN">ISBN</string>
    <string name="format_string">Format</string>
    <string name="format_any">Any Format</string>
    <string name="format_book">Book</string>
    <string name="format_large_print">Large Print</string>
    <string name="format_audiobook">Audiobook</string>
    <string name="format_audio_ebook">Audio EBook</string>
    <string name="format_ebook">Ebook</string>
    <string name="format_dvd">DVD</string>
    <string name="format_Bray_disc">Blu-ray Disc</string>
    <string name="format_videotape">Videotape</string>
    <string name="format_music_cd">Music CD</string>
    <string name="format_sound_recording">Sound Recording</string>
    <string name="format_serial">Serial</string>
    <string name="search_hint">Type and Search</string>
    <string name="menu_search">Search</string>
    <string name="footer_text_1">More...</string>
    <string name="range_start">Start Date</string>
    <string name="range_end">End Date</string>
    <string name="date_range">Date Range</string>
    <string name="datepicker_start">Start Date</string>
    <string name="datepicker_end">End Date</string>
    <string name="menu_library">Libraries</string>
    <string name="menu_bookmobile">Bookmobile</string>
    <string name="menu_cape_may_city_library">Cape May City Library</string>
    <string name="menu_cape_may_courthouse_library">Cape May Courthouse Library</string>
    <string name="menu_lower_cape_library">Lower Cape Library</string>
    <string name="menu_sea_isle_city_library">Sea Isle City Library</string>
    <string name="menu_stone_harbor_library">Stone Harbor Library</string>
    <string name="menu_upper_cape_library">Upper Cape Library</string>
    <string name="menu_wildwood_crest_library">Wildwood Crest Library</string>
    <string name="menu_woodbine_library">Woodbine Library</string>
    <string name="search_byAll">All Libraries</string>
    <string name="calendar_details_test">Test</string>
</resources>
