<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_searchby"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/searchby_string">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/searchby_any"
                    android:orderInCategory="21"
                    android:title="@string/searchby_any" />
                <item android:id="@+id/searchby_title"
                    android:orderInCategory="23"
                    android:title="@string/searchby_title" />
                <item android:id="@+id/searchby_author"
                    android:orderInCategory="22"
                    android:title="@string/searchby_author" />
                <item android:id="@+id/searchby_ISBN"
                    android:orderInCategory="24"
                    android:title="@string/searchby_ISBN" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_format"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/format_string">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/format_any"
                    android:orderInCategory="1"
                    android:title="@string/format_any" />
                <item android:id="@+id/format_book"
                    android:orderInCategory="2"
                    android:title="@string/format_book" />
                <item android:id="@+id/format_large_print"
                    android:orderInCategory="3"
                    android:title="@string/format_large_print" />
                <item android:id="@+id/format_audiobook"
                    android:orderInCategory="4"
                    android:title="@string/format_audiobook" />
                <item android:id="@+id/format_audio_ebook"
                    android:orderInCategory="5"
                    android:title="@string/format_audio_ebook" />
                <item android:id="@+id/format_ebook"
                    android:orderInCategory="6"
                    android:title="@string/format_ebook" />
                <item android:id="@+id/format_dvd"
                    android:orderInCategory="7"
                    android:title="@string/format_dvd" />
                <item android:id="@+id/format_Bray_disc"
                    android:orderInCategory="8"
                    android:title="@string/format_Bray_disc" />
                <item android:id="@+id/format_videotape"
                    android:orderInCategory="9"
                    android:title="@string/format_videotape" />
                <item android:id="@+id/format_music_cd"
                    android:orderInCategory="10"
                    android:title="@string/format_music_cd" />
                <item android:id="@+id/format_sound_recording"
                    android:orderInCategory="11"
                    android:title="@string/format_sound_recording" />
                <item android:id="@+id/format_serial"
                    android:orderInCategory="12"
                    android:title="@string/format_serial" />
            </group>
        </menu>
    </item>


</menu>